<resources>
    <string name="app_name">MAD Assignment</string>

    <!-- General -->
    <string name="return_to_previous">Return to previous screen</string>
    <string name="wilderness">Wilderness</string>
    <string name="market">Market</string>
    <string name="backpack">Backpack</string>
    <string name="overview">Overview</string>

    <!-- Welcome Activity -->
    <string name="title1">Explorer Game 2:</string>
    <string name="title2">Electric Boogaloo</string>
    <string name="author">By Aaron Musgrave</string>
    <string name="continue_game">Continue Game</string>
    <string name="new_game">Start New Game</string>

    <!-- Status Bar Fragment -->
    <string name="cash">Cash</string>
    <string name="health">Health</string>
    <string name="mass">Mass</string>
    <string name="reset">Reset game</string>

    <!-- Area Info Fragment -->
    <string name="town">Town</string>
    <string name="description">Description</string>
    <string name="star_area">Star area</string>
    <string name="edit_description">Edit description</string>

    <!-- Navigation Activity -->
    <string name="options">Options</string>
    <string name="move_north">Move North</string>
    <string name="move_west">Move West</string>
    <string name="move_east">Move East</string>
    <string name="move_south">Move South</string>

    <!-- List Fragment -->
    <string name="food">Food</string>
    <string name="equipment">Equipment</string>
    <string name="sell">Sell Item(s)</string>
    <string name="buy">Buy Item(s)</string>
    <string name="drop">Drop Item(s)</string>
    <string name="pick_up">Pick Up Item(s)</string>
    <string name="eat">Eat Food</string>
    <string name="use">Use Item</string>
    <string name="no_items">No Items to Show</string>

    <!-- Game End Activity -->
    <string name="game_won">You Win</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play again</string>
    <string name="quit">Quit</string>

    <!-- Smell-O-Scope -->
    <string name="smell_o_scope">Smell-O-Scope</string>

    <!-- Ben Kenobi -->
    <string name="ben_kenobi">Ben Kenobi</string>
    <string name="kenobi_description">When used in a town, you immediately acquire all items in the market without paying for them. The same happens in wilderness areas, even thout this isn\'t terribly useful.</string>
    <string name="do_it">Do it</string>
    <string name="dont_try_it">Don\'t Try it</string>

    <!-- Improbability Drive -->
    <string name="improbability_drive">Improbability Drive</string>
    <string name="drive_description">When used, causes the entire map (all areas and the items in each area) to be randomly re-generated, except that the player keeps their current items.</string>
    <string name="got_towel">I\'ve got my towel</string>
    <string name="save_for_thurs">Save for a Thursday</string>
</resources>
