<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity">

    <fragment
        android:id="@+id/fragStatusBar"
        android:name="au.edu.curtin.madassignment.StatusBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <fragment
        android:id="@+id/fragAreaInfo"
        android:name="au.edu.curtin.madassignment.AreaInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/fragStatusBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:rowCount="2"
        android:columnCount="3"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnOptions"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/options"
            android:textSize="8pt"/>

        <ImageButton
            android:id="@+id/btnNorth"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:contentDescription="@string/move_north"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />

        <Button
            android:id="@+id/btnOverview"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity=""
            android:text="@string/overview"
            android:textSize="8pt"/>

        <ImageButton
            android:id="@+id/btnWest"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity=""
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/move_west"/>

        <ImageButton
            android:id="@+id/btnSouth"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/move_south"/>

        <ImageButton
            android:id="@+id/btnEast"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/move_east"/>

    </GridLayout>
</android.support.constraint.ConstraintLayout>