<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ImprobabilityDriveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/lblKenobi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/improbability_drive"
            android:textSize="12pt"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <VideoView
            android:id="@+id/vidThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drive_description"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/got_towel"
            android:textSize="8pt"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/save_for_thurs"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>