<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.StatusBarFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layoutLabels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lblCash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cash"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lblHealth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/health"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lblMass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mass"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutValues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintTop_toBottomOf="@+id/layoutLabels">

            <TextView
                android:id="@+id/valCash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$100"
                android:gravity="center"/>

            <TextView
                android:id="@+id/valHealth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100.00"
                android:gravity="center"/>

            <TextView
                android:id="@+id/valMass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10.00kg"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSpecialItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintTop_toBottomOf="@id/layoutValues">

            <ImageView
                android:id="@+id/imgMonkey"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_monkey_grey_24dp"/>

            <ImageView
                android:id="@+id/imgMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_map_grey_24dp"/>

            <ImageView
                android:id="@+id/imgIce"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_ice_grey_24dp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_refresh_black_24dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/reset"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>